--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -4,7 +4,7 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine-core/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-core/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-core/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-core/jasmine-html.js"></script>
@@ -12,9 +12,11 @@
 
   <!-- include source files here... -->
   <script src="../dist/joda-js.js"></script>
-    <!-- include spec files here... -->
-    <script src="spec/DateTimeUtils.spec.js"></script>
-      <!-- end spec files -->
+
+  <!-- include spec files here... -->
+  <script src="spec/DateTimeUtils.spec.js"></script>
+  <!-- end spec files -->
+
   <script type="text/javascript">
     (function() {
       var jasmineEnv = jasmine.getEnv();
@@ -23,7 +25,7 @@
       var htmlReporter = new jasmine.HtmlReporter();
 
       jasmineEnv.addReporter(htmlReporter);
-        jasmineEnv.addReporter(new jasmine.JSReporter());
+      jasmineEnv.addReporter(new jasmine.JSReporter());
 
       jasmineEnv.specFilter = function(spec) {
         return htmlReporter.specFilter(spec);
