first version of LocalDate

--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -14,7 +14,9 @@
   <script src="../dist/joda-js.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/TestUtils.js"></script>
   <script src="spec/DateTimeUtils.spec.js"></script>
+  <script src="spec/LocalDate.spec.js"></script>
   <!-- end spec files -->
 
   <script type="text/javascript">
