--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -15,8 +15,10 @@
 
   <!-- include spec files here... -->
   <script src="spec/TestUtils.js"></script>
+  <script src="spec/DateTimeFormatterBuilder.spec.js"></script>
   <script src="spec/DateTimeUtils.spec.js"></script>
   <script src="spec/LocalDate.spec.js"></script>
+  <script src="spec/LocalDateTime.spec.js"></script>
   <!-- end spec files -->
 
   <script type="text/javascript">
