--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -15,6 +15,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/TestUtils.js"></script>
+  <script src="spec/DateTimeFormat.spec.js"></script>
   <script src="spec/DateTimeFormatterBuilder.spec.js"></script>
   <script src="spec/DateTimeUtils.spec.js"></script>
   <script src="spec/LocalDate.spec.js"></script>
