don't use 'new' in test cases

--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="jasmine-jsreporter.js"></script>
 
   <!-- include source files here... -->
-  <script src="../dist/joda-js.js"></script>
+  <script src="../dist/joda-js.min.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TestUtils.js"></script>
@@ -20,6 +20,7 @@
   <script src="spec/DateTimeUtils.spec.js"></script>
   <script src="spec/LocalDate.spec.js"></script>
   <script src="spec/LocalDateTime.spec.js"></script>
+  <script src="spec/LocalTime.spec.js"></script>
   <!-- end spec files -->
 
   <script type="text/javascript">
