added translation infrastructure

--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -11,7 +11,8 @@
   <script type="text/javascript" src="jasmine-jsreporter.js"></script>
 
   <!-- include source files here... -->
-  <script src="../dist/joda-js.min.js"></script>
+  <script src="../dist/joda-js.js"></script>
+  <script src="../dist/translations_en.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TestUtils.js"></script>
