--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -13,6 +13,7 @@
   <!-- include source files here... -->
   <script src="../dist/joda-js.js"></script>
   <script src="../dist/translations_en.js"></script>
+  <script src="../dist/translations_de.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TestUtils.js"></script>
