--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -20,6 +20,7 @@
   <script src="spec/DateTimeFormat.spec.js"></script>
   <script src="spec/DateTimeFormatterBuilder.spec.js"></script>
   <script src="spec/DateTimeUtils.spec.js"></script>
+  <script src="spec/JsonFormatter.spec.js"></script>
   <script src="spec/LocalDate.spec.js"></script>
   <script src="spec/LocalDateTime.spec.js"></script>
   <script src="spec/LocalTime.spec.js"></script>
